--- a/components/theme/_components/button.scss
+++ b/components/theme/_components/button.scss
@@ -4,7 +4,7 @@
   position: fixed;
   bottom: 1rem;
   right: 1rem;
-  z-index: 9999;
+  z-index: 100; /* --z-overlay */
   width: 3rem;            // 48px
   height: 3rem;           // 48px
   cursor: pointer;
