--- a/components/Layouts/shop/_components/Mobile.scss
+++ b/components/Layouts/shop/_components/Mobile.scss
@@ -258,7 +258,7 @@
 
   z-index: 61; /* --z-drawer panel */
 
-  background: hsl(var(--background));
+  background: var(--lt-bg);
   border-right: 1px solid hsl(var(--border));
   box-shadow: 0 16px 40px rgba(0, 0, 0, 0.25);
 
